Fixing z-index on red sheet

--- a/app/assets/stylesheets/components/_red_sheet.sass
+++ b/app/assets/stylesheets/components/_red_sheet.sass
@@ -10,6 +10,7 @@
   opacity: 0
   pointer-events: none
   transition: opacity 0.25s
+  z-index: 9
 
   input[type="submit"]
     +button-color(darken($primary-color, 5%))
